--- a/app/src/main/res/layout/activity_show.xml
+++ b/app/src/main/res/layout/activity_show.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="#0099cc"
+    android:background="?android:colorBackground"
     tools:context="com.wesleymoy.fullscreentext.ShowActivity">
 
     <!-- The primary full-screen view. This can be replaced with whatever view
@@ -16,7 +16,7 @@
         android:gravity="center"
         android:keepScreenOn="true"
         app:exampleString="@string/dummy_content"
-        app:exampleColor="#33b5e5"/>
+        app:exampleColor="?colorPrimary"/>
 
     <!-- This FrameLayout insets its children based on system windows using
          android:fitsSystemWindows. -->
